--- a/p7/report.tex
+++ b/p7/report.tex
@@ -122,7 +122,7 @@ The measured values from the experiment are as follows:
 \item $\hat{d} = -0.0206$
 \item $SE = 0.0044$
 \item $ME = 8.5652 \times 10^{-3}$
-\item $CI = [-0.0291,-0.0120]
+\item $CI = [-0.0291,-0.0120]$
 \item $d_{min} = 0.01$
 \end{itemize}
 
@@ -136,7 +136,7 @@ therefore conclude that we have observed a valid change in Gross Conversion.
 \item $\hat{d} = -0.0049$
 \item $SE = 3.4340 \time 10^{-3}$
 \item $ME = 6.7228 \times 10^{-3}$
-\item $CI = [-0.0116,0.0018]
+\item $CI = [-0.0116,0.0018]$
 \item $d_{min} = 0.0075$
 \end{itemize}
 
